deploy/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cluster-control
  labels:
    name: cluster-control
    monitoring: enabled
